# cargo-install-from-manifest

./: Cargo.toml  Containerfile
.github/workflows/: build.yml  linting.yml
src/: main.rs
