[package]
name = "install-from-manifest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.11.5"
clap = { version = "3.2.15", features = ["derive"] }
indicatif = "0.16.2"
which = "4.2.5"
yansi = "0.5.1"

[profile.release]
codegen-untis = 1
lto = true
strip = true