[package]
name = "cargo-install-from-manifest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.11.5"
clap = { version = "3.2.15", features = ["derive"] }
indicatif = "0.16.2"
which = "4.2.5"
yansi = "0.5.1"
clap-cargo = "0.9.1"
clap_complete = "3.2.3"
clap_complete_fig = "3.2.4"

[profile.release]
codegen-units = 1
lto = true
strip = true
